# crdt-richtext

./: .gitignore  Cargo.toml  README.md  deno.json  test_patch.excalidraw  thoughts.excalidraw
benches/: automerge.rs  bench.rs  rich-text.rs
crdt-richtext-wasm/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
crdt-richtext-wasm/scripts/: build.mjs
crdt-richtext-wasm/src/: lib.rs
crdt-richtext-wasm/tests/: add.test.ts  rich_text.test.ts
examples/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: basic.rs  five-actors.rs  rich-text-apply.rs  rich-text-match.rs  rich-text-utf16.rs  rich-text.rs
js/: package.json  pnpm-lock.yaml
src/: lib.rs  range_map.rs  rich_text.rs  test_utils.rs
src/legacy/: README.md  mod.rs  range_map.rs  test.rs  test_utils.rs
src/legacy/range_map/: dumb_impl.rs  tree_impl.rs
src/range_map/: dumb_impl.rs  small_set.rs  test.rs  tree_impl.rs
src/rich_text/: ann.rs  cursor.rs  delta.rs  encoding.rs  error.rs  event.rs  id_map.rs  iter.rs  op.rs  rga.rs  rich_tree.rs  test.rs  test_utils.rs  vv.rs
src/rich_text/rich_tree/: query.rs  rich_tree_btree_impl.rs  utf16.rs
src/rich_text/test/: insert.rs
src/rich_text/test_utils/: fuzz_line_breaks.rs
src/test_utils/: test.rs
