[package]
name = "crdt-range"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crdt-list = { version = "0.4.1", optional = true, features = ["fuzzing"] }
rand = { version = "0.8.5", optional = true }
arbitrary = { version = "1.2.3", optional = true }
enum-as-inner = "0.5.1"
arref = "0.1.0"
debug-log = "0.1.4"
heapless = "0.7.16"
fxhash = "0.2.1"
generic-btree = { version = "0.1.0", path = "../generic-btree" }
bitvec = "1.0.1"

[dev-dependencies]
pprof = { version = "0.11.1", features = [
  "flamegraph",
  "criterion",
  "frame-pointer",
] }
criterion = "0.4.0"
arbtest = "0.2.0"
color-backtrace = "0.5.1"
ctor = "0.1.26"

[features]
test = ["crdt-list", "rand", "arbitrary"]


[[bench]]
name = "bench"
harness = false
